--- a/composer.json
+++ b/composer.json
@@ -3,17 +3,13 @@
     "keywords": ["template"],
     "license": "MIT",
     "require": {
-        "php": ">=7.1",
-        "railken/bag": "^1.2",
-        "rcrowe/twigbridge": "^0.9.6",
-        "mewesk/twig-excel-bundle": "^2.1",
-        "dompdf/dompdf": "^0.8.2"
+        "php": ">=8.2",
+        "railken/bag": "^2.0",
+        "rcrowe/twigbridge": "^0.14.2",
+        "dompdf/dompdf": "^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~7.0",
-        "phpstan/phpstan": "^0.10",
-        "orchestra/testbench": "~3.6",
-        "friendsofphp/php-cs-fixer": "^2.8.1",
+        "orchestra/testbench": "*",
         "spatie/pdf-to-text": "^1.1"
     },
     "autoload": {
